Fix alphabetical order on smaller screens

--- a/app/assets/stylesheets/language.scss
+++ b/app/assets/stylesheets/language.scss
@@ -93,12 +93,20 @@
   border: 1px solid #f5f5f5;
   cursor: pointer;
   white-space: nowrap;
+  width: 100%;
+
   input[type=checkbox] {
     margin-right: 4px;
   }
 
   &:hover {
     background-color: #f5f5f5;
+  }
+}
+
+@media (max-width: 400px) {
+  .col-languages {
+    width: 100%;
   }
 }
 
